--- a/tablica-backend/src/main/resources/application.properties
+++ b/tablica-backend/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=tablica-backend
+
+# DATABASE SETTINGS
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_LOGIN}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.database=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#SECURITY
+security.jwt.secret-key=${JWT_SECRET_KEY}
