--- a/tablica-backend/src/main/resources/application.properties
+++ b/tablica-backend/src/main/resources/application.properties
@@ -14,3 +14,6 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # SECURITY
 security.jwt.secret-key=${JWT_SECRET_KEY}
+
+# IMAGES
+app.upload.dir=${user.dir}/uploads
