--- a/tablica-backend/src/main/resources/application.properties
+++ b/tablica-backend/src/main/resources/application.properties
@@ -14,6 +14,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 # SECURITY
 security.jwt.secret-key=${JWT_SECRET_KEY}
+security.jwt.expiration-time=${JWT_EXPIRATION_TIME}
 
 # IMAGES
 app.upload.dir=${user.dir}/uploads
